--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bent": "^7.3.10",
     "htmlparser2": "^4.1.0",
     "feedparser": "^2.2.10",
-    "fixed-chunker": "^0.0.6"
+    "fixed-chunker": "^0.0.6",
+    "urlify": "^0.3.6"
   }
 }
